gluecodium/src/test/resources/smoke/errors/output/lime/smoke/ErrorsInterface.lime
package smoke
interface ErrorsInterface {
    enum InternalError {
        ERROR_NONE,
        ERROR_FATAL
    }
    enum ExternalErrors {
        NONE,
        BOOM,
        BUST
    }
    exception Internal(InternalError)
    exception External(ExternalErrors)
    fun methodWithErrors() throws Internal
    fun methodWithExternalErrors() throws External
    fun methodWithErrorsAndReturnValue(): String throws Internal
    static fun methodWithPayloadError() throws WithPayload
    static fun methodWithPayloadErrorAndReturnValue(): String throws WithPayload
}
